--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,3 +34,30 @@ jobs:
         name: app
         path: target/ROOT.war
         if-no-files-found: error
+
+  publish:
+    name: Deploy WAR and supporting files
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - uses: actions/checkout@v2
+        
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: app
+    
+    - name: Deploy to App Service
+      run: | 
+        az webapp deploy \
+          --resource-group ${{ secrets.RESOURCE_GROUP }} \
+          --name ${{secrets.WEBAPP}} \
+          --src-path ./ROOT.war \
+          --type war \
+          --restart false
